fixed contrast issues

--- a/styles/form.css
+++ b/styles/form.css
@@ -66,7 +66,7 @@ p, label {
 }
 
 .colorC {
-    color: rgb(18, 121, 224);
+    color: rgb(12, 80, 148);
     font-size: 14px;
 }
 
